--- a/FeatherPlayer/MySongList.xaml
+++ b/FeatherPlayer/MySongList.xaml
@@ -6,20 +6,20 @@
       xmlns:local="clr-namespace:FeatherPlayer"
       mc:Ignorable="d" 
       d:DesignHeight="580" d:DesignWidth="1054"
-      Title="MySongList">
+      Title="MySongList" Margin="0,0,34,0">
 
-    <Grid>
+    <Grid Margin="0,0,-31,0">
         <Label x:Name="lblMySongList" Content="我的歌单" HorizontalAlignment="Left" Margin="69,13,0,0" VerticalAlignment="Top" Foreground="White" FontSize="26"/>
         <Label x:Name="lblMySongListPath" Content="X:\XXX\XXXX" HorizontalAlignment="Left" Margin="188,25,0,0" VerticalAlignment="Top" Foreground="#FF9B9B9B" FontSize="14"/>
 
         <local:fButton x:Name="SongList1" HorizontalAlignment="Left" Height="195" Margin="70,80,0,0" VerticalAlignment="Top" Width="195"/>
         <local:fButton x:Name="SongList2" Margin="320,80,0,0" HorizontalAlignment="Left" Width="195" Height="195" VerticalAlignment="Top"/>
-        <local:fButton x:Name="SongList3" Height="195" Margin="560,80,299,0" VerticalAlignment="Top"/>
-        <local:fButton x:Name="SongList4" Height="195" Margin="800,80,59,0" VerticalAlignment="Top"/>
-        <local:fButton x:Name="SongList5" Height="195" Margin="70,330,789,0" VerticalAlignment="Top"/>
-        <local:fButton x:Name="SongList6" Height="195" Margin="320,330,539,0" VerticalAlignment="Top"/>
-        <local:fButton x:Name="SongList7" Height="195" Margin="560,330,299,0" VerticalAlignment="Top"/>
-        <local:fButton x:Name="SongList8" Height="195" Margin="800,330,59,0" VerticalAlignment="Top"/>
+        <local:fButton x:Name="SongList3" Height="195" Margin="560,80,333,0" VerticalAlignment="Top"/>
+        <local:fButton x:Name="SongList4" Height="195" Margin="800,80,93,0" VerticalAlignment="Top"/>
+        <local:fButton x:Name="SongList5" Height="195" Margin="70,330,823,0" VerticalAlignment="Top"/>
+        <local:fButton x:Name="SongList6" Height="195" Margin="320,330,573,0" VerticalAlignment="Top"/>
+        <local:fButton x:Name="SongList7" Height="195" Margin="560,330,333,0" VerticalAlignment="Top" Width="195"/>
+        <local:fButton x:Name="SongList8" Height="195" Margin="800,330,93,0" VerticalAlignment="Top" Width="195"/>
         <Grid.Effect>
             <DropShadowEffect ShadowDepth="1" BlurRadius="10" Color="Black" Opacity="0.8"/>
         </Grid.Effect>
