--- a/FeatherPlayer/MainWindow.xaml
+++ b/FeatherPlayer/MainWindow.xaml
@@ -284,7 +284,7 @@
             <Label x:Name="lblSongTitle" Content="SongTitle" HorizontalAlignment="Left" Margin="91,14,0,37" FontSize="14" Foreground="White"/>
             <Grid x:Name="SongPic" HorizontalAlignment="Left" Margin="26,16,0,16" Width="47" Background="White" MouseEnter="SongPic_MouseEnter" MouseLeave="SongPic_MouseLeave"/>
             <Label x:Name="lblSinger" Content="Singer" HorizontalAlignment="Left" Margin="91,40,0,0" VerticalAlignment="Top" Foreground="#FF9B9B9B"/>
-            <Slider x:Name="sliSong" HorizontalAlignment="Left" Margin="413,45,0,0" VerticalAlignment="Top" Width="602" Style="{DynamicResource FeatherSlider}"/>
+            <Slider x:Name="sliSong" HorizontalAlignment="Left" Margin="413,45,0,0" VerticalAlignment="Top" Width="602" Style="{DynamicResource FeatherSlider}" PreviewMouseLeftButtonDown="sliSong_PreviewMouseLeftButtonDown" PreviewMouseLeftButtonUp="sliSong_PreviewMouseLeftButtonUp"/>
             <Label x:Name="lblPosition" Content="00:00 / 00:00" HorizontalAlignment="Left" Margin="413,14,0,0" VerticalAlignment="Top" Foreground="White" FontSize="14"/>
             <Label x:Name="lblSongInformation" Content="48kHz / 24bit" HorizontalAlignment="Left" Margin="915,14,0,0" VerticalAlignment="Top" FontSize="14" Foreground="White"/>
             <Grid x:Name="btnPlayStop" HorizontalAlignment="Left" Height="47" Margin="294,16,0,0" VerticalAlignment="Top" Width="47" MouseEnter="PlayStop_MouseEnter" MouseLeave="PlayStop_MouseLeave" MouseLeftButtonDown="PlayStop_MouseLeftButtonDown">
